# todo-axum-htmx

./: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  tailwind.config.js
migrations/: 20231216233620_todos.sql
src/: main.rs  users.rs  web.rs
src/web/: app.rs  auth.rs  index.rs  protected.rs
templates/: index.html  login.html  protected.html
