[package]
name = "todo-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
tokio = {version = "1.28.0", features = ["full"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.2"
axum-login = "0.10.2"
password-auth = "1.0.0"
askama = {version="0.12.0", features = ["with-axum"]}
askama_axum = { version="0.4.0" }
sqlx = {version = "0.7.3", features=["runtime-tokio", "tls-rustls", "sqlite", "macros", "time"]}
time = "0.3.30"
serde = "1.0.193"
tower = "0.4.13"
